--- a/index.html
+++ b/index.html
@@ -3,77 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Estudio Jurídico Virtual en Monte Grande, Buenos Aires. Especialistas en derecho de familia, laboral y sucesiones. Atención personalizada online.">
-  <meta name="keywords" content="Estudio jurídico Monte Grande, abogado online, derecho de familia, sucesiones, laboral, consulta legal">
-  <title>Estudio Jurídico Dr. Lionel Nicolás Zurita</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
-    header { background: #003366; color: #fff; padding: 20px; text-align: center; }
-    nav ul { background: #004080; list-style: none; padding: 0; display: flex; justify-content: center; }
-    nav ul li { margin: 0 15px; }
-    nav ul li a { color: #fff; text-decoration: none; font-weight: bold; }
-    section { padding: 40px 20px; max-width: 1200px; margin: auto; }
-    .services, .social, .contact, .seo { margin-bottom: 50px; }
-    .services ul, .seo ul { list-style: disc; padding-left: 20px; }
-    footer { background: #003366; color: #fff; text-align: center; padding: 20px; }
-    .btn { display: inline-block; background: #007acc; color: white; padding: 10px 20px; text-decoration: none; margin-top: 10px; }
-    .social i { margin: 0 10px; font-size: 24px; }
-  </style>
+  <title>Inicio - Estudio Jurídico Zurita</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
     <h1>Estudio Jurídico Dr. Lionel Nicolás Zurita</h1>
-    <p>Defendiendo tus derechos con compromiso y excelencia</p>
+    <nav>
+      <a href="index.html">Inicio</a>
+      <a href="familia.html">Familia</a>
+      <a href="laboral.html">Laboral</a>
+      <a href="sucesiones.html">Sucesiones</a>
+      <a href="blog.html">Blog</a>
+      <a href="contacto.html">Contacto</a>
+    </nav>
   </header>
-
-  <nav>
-    <ul>
-      <li><a href="#servicios">Servicios</a></li>
-      <li><a href="#contenido">Contenido</a></li>
-      <li><a href="#contacto">Contacto</a></li>
-    </ul>
-  </nav>
-
-  <section id="servicios" class="services">
-    <h2>Servicios Jurídicos</h2>
-    <ul>
-      <li>Derecho de Familia: divorcios, régimen de visitas, alimentos.</li>
-      <li>Derecho Laboral: despidos, accidentes, asesoramiento legal.</li>
-      <li>Sucesiones y herencias.</li>
-      <li>Consultas legales virtuales.</li>
-    </ul>
-    <a class="btn" href="#contacto">Solicitá tu consulta</a>
-  </section>
-
-  <section id="contenido" class="seo">
-    <h2>Marketing Digital y Contenido</h2>
-    <ul>
-      <li><strong>Blog legal:</strong> artículos sobre problemáticas actuales.</li>
-      <li><strong>Guías prácticas:</strong> divorcios express, sucesiones simples, despidos injustificados.</li>
-      <li><strong>Casos de éxito:</strong> testimonios y resoluciones favorables.</li>
-    </ul>
-  </section>
-
-  <section class="social">
-    <h2>Seguinos en redes</h2>
-    <p>Conectamos con vos en múltiples plataformas</p>
-    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-    <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-  </section>
-
-  <section id="contacto" class="contact">
-    <h2>Contacto</h2>
-    <p>Email: <a href="mailto:drzuritalionel@gmail.com">drzuritalionel@gmail.com</a></p>
-    <p>Teléfono/WhatsApp: <a href="https://wa.me/5491137722140" target="_blank">1137722140</a></p>
-    <p>Ubicación: Monte Grande, Provincia de Buenos Aires</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Estudio Jurídico Dr. Lionel Nicolás Zurita. Todos los derechos reservados.</p>
-  </footer>
-
+  <main>
+    <p>Bienvenido al estudio jurídico virtual. Brindamos soluciones legales claras y efectivas en Monte Grande y a todo el país.</p>
+  </main>
 </body>
 </html>
